--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "scripts": {
     "test:watch": "npm test -- --watch",
     "clean": "rimraf static/ dist/",
-    "build": "npm run clean && env NODE_ENV=production webpack",
-    "start": "npm run build; node server/index.js",
-    "dev": "npm run clean; NODE_ENV=development nodemon --exec node server/index.js",
+    "build": "npm run clean && cross-env NODE_ENV=production webpack",
+    "start": "npm run build && node server/index.js",
+    "dev": "npm run clean && cross-env NODE_ENV=development nodemon --exec node server/index.js",
     "lint": "eslint src"
   },
   "keywords": [
@@ -38,6 +38,7 @@
     "babel-register": "^6.7.2",
     "css-loader": "^0.23.0",
     "cssnext-loader": "^1.0.1",
+    "cross-env": "1.0.7",
     "enzyme": "^2.2.0",
     "eslint": "^1.8.0",
     "eslint-loader": "^1.1.1",
